--- a/webscrape.ipynb
+++ b/webscrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,13 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
     "proxies = {\n",
-    "   'http': 'http://brd-customer-hl_181af92a-zone-datacenter_proxy1:ymvq2fw312fo@brd.superproxy.io:33335',\n",
-    "   'https': 'http://brd-customer-hl_181af92a-zone-datacenter_proxy1:ymvq2fw312fo@brd.superproxy.io:33335',\n",
+    "   'http': os.getenv(\"URL_PROXY_DC\"),\n",
+    "   'https': os.getenv(\"URL_PROXY_DC\")\n",
     "}\n",
     "# Server side proxy\n",
     "proxies = {\n",
@@ -433,8 +437,6 @@
    ],
    "source": [
     "import subprocess\n",
-    "import psutil\n",
-    "import time\n",
     "\n",
     "port = 24000\n",
     "proxy_port = 24001\n",
@@ -471,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +485,6 @@
     }
    ],
    "source": [
-    "import psutil\n",
     "import requests\n",
     "\n",
     "# print(f\"Server is running: {pid}\" if psutil.pid_exists(pid) else f\"Server is not running: {pid}\")\n",
@@ -5370,7 +5371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17037,7 +17038,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -17051,7 +17052,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
